# spdlog_setup

./: README.md  meson.build  meson_options.txt  readme.txt  upstream.wrap
